# No-Agents-Allowed

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  engine.rs  main.rs  patterns.rs  state.rs
src/merge/: block.rs  json.rs  mod.rs  toml.rs
src/targets/: mod.rs
tests/: cli.rs
tests/snapshots/: cli__all_targets.snap
